--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "serve": "^6.4.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run server\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "pouchdb-server -d ./db"
   }
 }
